--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -87,7 +87,7 @@
 <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Gift Amachree</a>.
+    Coded by <a href="#">Victory</a>.
   </div>
 </footer>
 </body>
